--- a/public/index.html
+++ b/public/index.html
@@ -44,16 +44,35 @@
                 <div class="setting p-1 mr-5"><span class="material-symbols-outlined">settings</span></div>                                        
             </div>
             <hr>
-            <div class="post flex items-center p-4">
+            <div class="post flex items-center p-4 my-7 h-12">
                 <img class="w-20 h-20 object-cover rounded-full" src="https://images.unsplash.com/photo-1492288991661-058aa541ff43?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" >
                 <div class="txt">
-                    <h1 class="text-3xl opacity-35 ml-3 mt-5">What is happening?</h1>
-                    <div class="public flex items-center p-2 ml-10 hover:bg-blue-100 hover:rounded-full">
-                        <span class="material-symbols-outlined text-blue-500">public</span>
-                        
-                    </div>                
+                    <input class="w-full h-10 my-2 mx-3 bg-black text-2xl text-white outline-none " type="text" placeholder="What is happening?">               
                 </div>
             </div>
+            <div class="globe text-blue-600 flex items-center gap-2 mx-28 text-xl h-2">
+                <span class="material-symbols-outlined">  globe_asia </span>  
+                <span class="font-bold">Everyone can reply</span>  
+            </div>
+            <div class="line w-4/5 h-px my-5 bg-white mx-28 opacity-30"></div>
+            <div class="icons flex items-center gap-1 w-4/5 bg-red-400 h-6 mx-28">
+                <span class="material-symbols-outlined">
+                    add_photo_alternate
+                    </span>
+                 <span class="material-symbols-outlined">
+                     gif_box
+                    </span>
+                <span class="material-symbols-outlined">
+                     ballot
+                 </span>
+                <span class="material-symbols-outlined">
+                    mood
+               </span>
+               <span class="material-symbols-outlined">
+                pending_actions
+                </span>
+            </div>
+            <br> <hr class="opacity-30">
         </div> 
         <div class="third w-full">
             <div class="search">
